UI issue with Home Page widgets on Firefox 3, fixed - Pinaki

--- a/themes/alphagrey/style.css
+++ b/themes/alphagrey/style.css
@@ -1169,7 +1169,6 @@ a.alpha:Hover{
 	border:1px solid #aaaaaa;
 	background-color:#FFFFFF;
 	width:31%;
-	position:relative;
 	visibility:visible;
 	margin:0.9%;
 	height:325px;
