--- a/themes/bluelagoon/style.css
+++ b/themes/bluelagoon/style.css
@@ -1133,7 +1133,6 @@ a.alpha:Hover{
 	border:1px solid #a5b5ee;
 	background-color:#FFFFFF;
 	width:31%;
-	position:relative;
 	visibility:visible;
 	margin:0.9%;
 	height:325px;
