--- a/themes/softed/style.css
+++ b/themes/softed/style.css
@@ -1236,7 +1236,6 @@ a.alpha:Hover{
 	background:#ffffff url(images/softedHomeMark.gif) repeat-x;
 	background-position:bottom left;
 	width:31%;
-	position:relative;
 	visibility:visible;
 	margin:0.9%;
 	height:325px;
