--- a/themes/woodspice/style.css
+++ b/themes/woodspice/style.css
@@ -1189,7 +1189,6 @@ a.alpha:Hover{
 	border:2px solid #a3a295;
 	background-color:#FFFFFF;
 	width:31%;
-	position:relative;
 	visibility:visible;
 	margin:9px;
 	height:325px;
